--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,30 @@ group = 'dodi258'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+// ========= lombok =========
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+// -------- lombok --------
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// ========= lombok =========
+	compileOnly 'org.project.lombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	// -------- lombok --------
+
+	testImplementation'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
